metadata/force-app/main/default/objects/CustomName_QRUKa__c/CustomName_QRUKa__c.object-meta.xml
<CustomObject>
    <description>Description_GoyYy</description>
    <label>CustomLabel_gmRKy</label>
    <nameField>
        <label>CustomLabel_gmRKy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_gmRKys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>