metadata/force-app/main/default/objects/CustomName_QRUKa__c/fields/CustomField_bMEFY__c.field-meta.xml
<CustomField>
    <fullName>CustomField_bMEFY__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldcpOkL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>